syntax = "proto3";

option csharp_namespace = "PayZe.Identity.Application.Protos";

import "google/protobuf/wrappers.proto";

service GrpcCompany {
    rpc GetAuction (GetCompanyIndetityRequest) returns (GrpcCompanyIdentityResponse);
}

message GetCompanyIndetityRequest {
    string apiKey = 1;
}

message GrpcCompanyIdentityModel {
    string id = 1;
    string hashedSecret = 2;
    string apiKey = 3;
    string salt = 4;
}

message GrpcCompanyIdentityResponse {
    GrpcCompanyIdentityModel identity = 1;
    string errorMessage =2;
}